# onboard-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  main.py  onboard-agent-tasks.csv  onboard_agent.sqlite  pyproject.toml  requirements.txt  token_generator.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
data/: maps.json
docs/: branching-strategy.md  github-setup.md  office-guide.md
migrations/: env.py
migrations/versions/: 3e488ddc5555_seed_departments_and_mentors_data.py  649707933e75_seed_departments.py  952747231624_migrating_departments.py  a96c2c884ccb_initial_migration.py  bc8254baa0d5_seed_additional_departments_hr_the_marq_.py
src/: config.py
src/api/: endpoints.py  middleware.py  security.py
src/database/: postgres.py  schema.py
src/graph/: build_graph.py  nodes.py  state.py
src/memory/: checkpointer.py
src/model/: llm.py
src/onboard_agent/: __init__.py  config.py
src/onboard_agent/api/: endpoints.py  middleware.py  security.py
src/onboard_agent/database/: postgres.py  schema.py
src/onboard_agent/graph/: build_graph.py  nodes.py  state.py
src/onboard_agent/model/: llm.py
src/onboard_agent/prompts/: llm_prompt  llm_prompt.py
src/onboard_agent/tools/: __init__.py  sql_tool.py  vector_tool.py
src/onboard_agent/vectorstore/: creation.py  retriever.py
src/prompts/: llm_prompt.py  sql_prompt  vector_prompt
src/tools/: __init__.py  navigation_tool.py  sql_tool.py  vector_tool.py
src/vectorstore/: creation.py  retriever.py
tests/unit/: test_config.py
