[project]
name = "onboard-agent"
version = "0.1.0"
description = "Onboarding agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # FIX: the merged agent + API code imported these but they were never declared,
    # so a clean install could not run the app. Pinned to the current major lines.
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-huggingface>=0.0.1",
    # Vector store (from the DB/agent PR): Qdrant, with PDF loading + chunking to
    # ingest the onboarding docs under data/.
    "langchain-qdrant>=0.1",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "pypdf>=4.0",
    # DB layer + migrations (from the database PR): SQLModel ORM and Alembic.
    "sqlmodel>=0.0.16",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# These modules hold long-form reference data and tool/prompt schema text
# (floor/department descriptions, SQL-tool docstring) that reads best on one
# line; wrapping it hurts legibility more than the line-length rule helps.
"src/database/schema.py" = ["E501"]
"src/tools/sql_tool.py" = ["E501"]
"src/prompts/llm_prompt.py" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection calls are meant to live in argument defaults;
# they are not the mutable-default-argument bug that B008 targets.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Security",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
